# generic-pretty

./: README.md  generic-pretty.cabal
src/Text/PrettyPrint/: Generic.hs
test/: test.hs
