name:                generic-pretty
version:             0.1.0.0
synopsis:            Pretty Printing for Generic
-- description:         
homepage:            http://tanakh.jp
license:             MIT
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) 2015 Hideyuki Tanaka
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.PrettyPrint.Generic
  -- other-modules:       
  -- other-extensions:    
  build-depends:       ansi-wl-pprint
                     , base >=4.8 && <4.9
                     , bytestring >=0.10
                     , containers >= 0.5.6
                     , text >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
